--- a/dapp3/translations/ko_KR.json
+++ b/dapp3/translations/ko_KR.json
@@ -95,8 +95,6 @@
     "schema.resumes": "이력서",
     "schema.volunteers": "자원 봉사자"
   },
-  "NvwsY": "Add your email",
-  "12r0wr": "Add name and photo",
   "12mbSM": "Enter a valid email address",
   "41nwZK": "What’s your email address?",
   "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
@@ -112,15 +110,25 @@
   "2gpciW": "Resending...",
   "2dOcWk": "Resend Code",
   "3EZpe2": "Verify",
+  "12r0wr": "Add name and photo",
   "4qV81m": "First Name",
   "LnsvL": "Last Name",
+  "yBGXb": "By providing a photo and name, you’ll make it easier for buyers and sellers on Origin to identify you.",
   "3QVGz1": "Your name and photo.",
   "29AcyI": "Learn more",
   "1xCh1J": "게시",
+  "2vReMp": "Earn Origin Tokens (OGN) by strengthening your profile and completing tasks in the Origin Marketplace.",
+  "3JfvSq": "Yes! Sign me up",
+  "wcJnW": "No, thanks",
   "29euMm": "Blockchain & Your Personal Data",
   "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "3Fn66p": "Got it",
   "2bKSKR": "Sign to Publish",
   "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3ukQa5": "Are you sure you don’t want Origin Rewards?",
+  "2dbJQ2": "You will not be able to earn OGN on Origin, but you can still verify your profile.",
+  "BfHYB": "I'm sure",
+  "eXPPI": "No, wait",
   "3RkM95": "First Name is required",
   "29aQWH": "Last Name is required",
   "43Wd7": "Earnings",
@@ -147,7 +155,9 @@
   "4qkP5F": "잘라내기",
   "BcfF1": "제거",
   "3N2LLn": "귀하의 브라우저가 비디오 태그를 지원하지 않습니다.",
-  "3cQwGQ": "Create a Profile",
+  "3PNgCE": "Create a profile",
+  "EbpWs": "Add name & photo",
+  "29ZJOe": "Get Rewards",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -637,8 +647,13 @@
   "1JeQU0": "본인 인증 절차를 완료하거나 친구들을 오리진에 초대하는 활동을 완료한 후 OGN을 획득하세요. OGN은 다양한 방법으로 사용할 수 있습니다. {campaignName} 이 종료된 후에, OGN을 얻을 수 있습니다.",
   "4fuMIp": "시작",
   "2El6Ld": "해제",
+  "2INjH3": "Origin Rewards Terms",
   "1R5Tqk": "약관 동의",
   "4DsgoB": "Sign Up for Origin Rewards",
+  "1oOkt7": "Join Origin’s reward program to earn Origin tokens (OGN). Terms and conditions apply.",
+  "157nkC": "Earned OGN will be distributed at the end of each campaign. OGN is currently locked for usage on the Origin platform and cannot be transferred. It is expected that OGN will be unlocked and transferrable in the future.",
+  "4weJUD": "By joining the Origin rewards program, you agree that you will not transfer or sell future earned Origin tokens to other for at least 1 year from the date of earning your tokens.",
+  "4vRJSg": "OGN are being issued in a transaction originally exempt from registration under the U.S. Securities Act of 1933, as amended (the “Securities Act”), and may not be transferred in the United States to, or for the account or benefit of, any U.S. person except pursuant to an available exemption from the registration requirements of the Securities Act and all applicable state securities laws. Terms used above have the meanings given to them in Regulation S under the Securities Act and all applicable laws and regulations.",
   "1c8jIG": "저는 이용 약관에 동의합니다",
   "2JZUuK": "사용 불가능 국가",
   "3ARgQ2": "죄송합니다. {country} 해당 국가에서는 사용할 수 없습니다.",
