--- a/dapp3/translations/fr_FR.json
+++ b/dapp3/translations/fr_FR.json
@@ -95,8 +95,6 @@
     "schema.resumes": "CV",
     "schema.volunteers": "Bénévolat"
   },
-  "NvwsY": "Add your email",
-  "12r0wr": "Add name and photo",
   "12mbSM": "Enter a valid email address",
   "41nwZK": "What’s your email address?",
   "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
@@ -112,15 +110,25 @@
   "2gpciW": "Resending...",
   "2dOcWk": "Resend Code",
   "3EZpe2": "Verify",
+  "12r0wr": "Add name and photo",
   "4qV81m": "First Name",
   "LnsvL": "Last Name",
+  "yBGXb": "By providing a photo and name, you’ll make it easier for buyers and sellers on Origin to identify you.",
   "3QVGz1": "Your name and photo.",
   "29AcyI": "Learn more",
   "1xCh1J": "Publier",
+  "2vReMp": "Earn Origin Tokens (OGN) by strengthening your profile and completing tasks in the Origin Marketplace.",
+  "3JfvSq": "Yes! Sign me up",
+  "wcJnW": "No, thanks",
   "29euMm": "Blockchain & Your Personal Data",
   "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "3Fn66p": "Got it",
   "2bKSKR": "Sign to Publish",
   "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3ukQa5": "Are you sure you don’t want Origin Rewards?",
+  "2dbJQ2": "You will not be able to earn OGN on Origin, but you can still verify your profile.",
+  "BfHYB": "I'm sure",
+  "eXPPI": "No, wait",
   "3RkM95": "First Name is required",
   "29aQWH": "Last Name is required",
   "43Wd7": "Earnings",
@@ -147,7 +155,9 @@
   "4qkP5F": "Surgir",
   "BcfF1": "Retirer",
   "3N2LLn": "Votre navigateur ne supporte pas le tag vidéo.",
-  "3cQwGQ": "Create a Profile",
+  "3PNgCE": "Create a profile",
+  "EbpWs": "Add name & photo",
+  "29ZJOe": "Get Rewards",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -637,8 +647,13 @@
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Commencer",
   "2El6Ld": "Rejeter",
+  "2INjH3": "Origin Rewards Terms",
   "1R5Tqk": "Accepter les termes",
   "4DsgoB": "Sign Up for Origin Rewards",
+  "1oOkt7": "Join Origin’s reward program to earn Origin tokens (OGN). Terms and conditions apply.",
+  "157nkC": "Earned OGN will be distributed at the end of each campaign. OGN is currently locked for usage on the Origin platform and cannot be transferred. It is expected that OGN will be unlocked and transferrable in the future.",
+  "4weJUD": "By joining the Origin rewards program, you agree that you will not transfer or sell future earned Origin tokens to other for at least 1 year from the date of earning your tokens.",
+  "4vRJSg": "OGN are being issued in a transaction originally exempt from registration under the U.S. Securities Act of 1933, as amended (the “Securities Act”), and may not be transferred in the United States to, or for the account or benefit of, any U.S. person except pursuant to an available exemption from the registration requirements of the Securities Act and all applicable state securities laws. Terms used above have the meanings given to them in Regulation S under the Securities Act and all applicable laws and regulations.",
   "1c8jIG": "J'accepte les termes et conditions",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Oups, {country} n'est pas éligible",
