--- a/shah/translations/fil_PH.json
+++ b/shah/translations/fil_PH.json
@@ -826,10 +826,6 @@
     "*": "mga listahan {number}",
     "_1": "1 Listing"
   },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
-  },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
     "_1": "{count} Listing with Origin Rewards"
@@ -845,11 +841,11 @@
   "2Qfyq": "Lumikha ng Listahan",
   "4u7nzi": "Walang natagpuang listahan",
   "4v3q78": "Mag-load nang higit pa",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Hindi maaaring mag-query ng mga mensahe",
   "333iq2": "Walang mga pag-uusap!",
   "1DH3KE": "Mga mensahe",
@@ -989,6 +985,7 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Magagamit para sa {browser}",
   "29RrPk": "Ikonekta ang MetaMask",
+  "1AQgmT": "Opening App...",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
