--- a/shah/translations/nl_NL.json
+++ b/shah/translations/nl_NL.json
@@ -826,10 +826,6 @@
     "*": "{number} Advertenties",
     "_1": "1 Aanbieding"
   },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
-  },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
     "_1": "{count} Listing with Origin Rewards"
@@ -845,11 +841,11 @@
   "2Qfyq": "Maak een aanbieding",
   "4u7nzi": "Geen aanbiedingen gevonden",
   "4v3q78": "Meer laden",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Kan geen berichten opvragen",
   "333iq2": "Geen gesprekken!",
   "1DH3KE": "Berichten",
@@ -989,6 +985,7 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Beschikbaar voor {browser}",
   "29RrPk": "Verbind MetaMask",
+  "1AQgmT": "Opening App...",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
