--- a/shah/translations/ro_RO.json
+++ b/shah/translations/ro_RO.json
@@ -826,10 +826,6 @@
     "*": "{number} anunțuri",
     "_1": "1 Înregistrare"
   },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
-  },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
     "_1": "{count} Listing with Origin Rewards"
@@ -845,11 +841,11 @@
   "2Qfyq": "Creați o listă",
   "4u7nzi": "Nu s-au gasit oferte",
   "4v3q78": "Incarca mai mult",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Nu se pot interoga mesajele",
   "333iq2": "Nicio conversație!",
   "1DH3KE": "Mesaje",
@@ -989,6 +985,7 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Disponibil pentru {browser}",
   "29RrPk": "Conectați MetaMask",
+  "1AQgmT": "Opening App...",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
