--- a/shah/translations/zh_CN.json
+++ b/shah/translations/zh_CN.json
@@ -826,10 +826,6 @@
     "*": "{number} 列表",
     "_1": "一个列表项目"
   },
-  "2CpFQp": {
-    "*": "{count} {category} 结果",
-    "_1": "{count} {category} 结果"
-  },
   "3pJs9O": {
     "*": "{count}带有Origin奖励的列表",
     "_1": "{count}带有Origin奖励的列表"
@@ -845,11 +841,11 @@
   "2Qfyq": "创建列表",
   "4u7nzi": "找不到任何列表",
   "4v3q78": "装载更多",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "无法找到信息",
   "333iq2": "没有对话！",
   "1DH3KE": "消息",
@@ -989,6 +985,7 @@
   "1X9OF7": "MetaMask是一个浏览器扩展，允许您访问去中心化的网络。",
   "XaD4D": "可用于 {browser}",
   "29RrPk": "连接MetaMask",
+  "1AQgmT": "Opening App...",
   "4apdzo": "立即推广",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "不够OGN",
