--- a/shah/translations/zh_TW.json
+++ b/shah/translations/zh_TW.json
@@ -826,10 +826,6 @@
     "*": "{number} 刊登",
     "_1": "1上市"
   },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
-  },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
     "_1": "{count} Listing with Origin Rewards"
@@ -845,11 +841,11 @@
   "2Qfyq": "創建一個列表",
   "4u7nzi": "找不到房源",
   "4v3q78": "裝載更多",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "無法查詢郵件",
   "333iq2": "沒有對話！",
   "1DH3KE": "消息",
@@ -989,6 +985,7 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "可用於 {browser}",
   "29RrPk": "連接MetaMask",
+  "1AQgmT": "Opening App...",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
