--- a/shah/translations/ru_RU.json
+++ b/shah/translations/ru_RU.json
@@ -513,24 +513,10 @@
   "3OynBg": "Требуется повышение",
   "enjCs": "Boost должен быть числом",
   "2PfKPF": "Увеличение должно быть ноль или больше",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Ваше объявление создано!",
-  "3wzgqi": "Ваш список будет виден в течение нескольких секунд. Вот что происходит дальше: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Теперь покупатели увидят ваше объявление на торговой площадке.",
-  "1kWh5e": "Когда покупатель предложит купить ваш товар, вы можете принять или отклонить его предложение.",
-  "tlGL2": "Если вы примите предложение, вы должны выполнить заказ.",
-  "GDqc6": "Вы получите платеж, как только покупатель подтвердит, что заказ выполнен.",
-  "RwRY0": "Посмотреть список",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Ваше объявление обновлено!",
-  "3uI2LK": "Ваш список будет виден в течение нескольких секунд. Вот что происходит дальше: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Теперь покупатели увидят ваше объявление на торговой площадке.",
-  "1FflGv": "Когда покупатель предложит купить ваш товар, вы можете принять или отклонить его предложение.",
-  "1lOiT1": "Если вы примите предложение, вы должны выполнить заказ.",
-  "1ZL8Bw": "Вы получите платеж, как только покупатель подтвердит, что заказ выполнен.",
-  "4iVrWM": "Загрузка",
+  "IY0I8": "Поздравляю",
+  "2CH3xS": "Вы успешно разместили своё объявление.",
+  "3fVQoe": "Посмотреть моё объявление",
+  "3irw3i": "Создать другое объявление",
   "3BUXpv": "{=Approve OGN} Нажмите ниже, чтобы подтвердить OGN для использования в Origin",
   "1DYydy": "Подтведить OGN",
   "1ZMsNQ": "Успех!",
@@ -763,10 +749,6 @@
   "2QlAhE": "Комиссия за единицу",
   "1Lcd02": "Общий бюджет",
   "NWpZ1": "Общий оставшийся бюджет",
-  "8kJRE": "Продвиньте ваше объявление с",
-  "1voSMo": "Получить больше экспозиции и продавать быстрее.",
-  "4u4ITL": "Рекламировать сейчас",
-  "1uOQBZ": "Как получить OGN",
   "3a7oWw": "Список воздействия",
   "17sXwL": "Редактировать комиссию",
   "2SB7RO": "Ожидающие",
@@ -792,6 +774,10 @@
   "73tw2": "Ваш ETH будет отправлен на эскроу-контракт и будет храниться на нем до завершения сделки.",
   "1BJrxU": "Сумма ETH является приблизительной и будет конвертирована в DAI перед переводом в договор условного депонирования.",
   "1vXR79": "Оплата",
+  "8kJRE": "Продвиньте ваше объявление с",
+  "1voSMo": "Получить больше экспозиции и продавать быстрее.",
+  "4u4ITL": "Рекламировать сейчас",
+  "1uOQBZ": "Как получить OGN",
   "IlnwX": "Количество",
   "1usuUr": "Часовой пояс:",
   "4xvjOX": "ПРИМЕЧАНИЕ: это отличается от вашего часового пояса {userTimeZone}",
@@ -986,11 +972,16 @@
   "XaD4D": "Доступно для {browser}",
   "29RrPk": "Подключите MetaMask",
   "1AQgmT": "Открытие приложения...",
+  "4iVrWM": "Loading",
   "4apdzo": "Рекламировать сейчас",
   "1o5hKC": "Пожалуйста, введите сумму комиссии",
   "2IWJV3": "Недостаточно OGN",
   "3kj2Lx": "Продвинуть объявление",
+  "L9mjs": "OGN баланс:",
   "2cMBmH": "Доступные единицы {unitsAvailable}",
+  "kqBmE": "Комиссия за проданную единицу",
+  "1ZZXAc": "Сумма комиссии",
+  "F4rDk": "Выплачено при продаже вашего объявления.",
   "3m3bsx": "{unitsAvailable} единицы × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Список воздействия:",
@@ -999,9 +990,13 @@
   "1kXVpx": "Сумма, которую вы готовы потратить для продажи всех вещей",
   "2luPDv": "Общая комиссия, необходимая для продажи {unitsAvailable} единиц {totalCommission} OGN",
   "1lrIeH": "Как это работает?",
-  "KOIsn": "Вы можете рекламировать своё объявление, путем внесения токенов Origin (OGN). Ваш OGN поход на {=commission}, который будет вычитаться каждый раз, когда производится продажа. Это дает вашему объявлению {=more exposure} по всей сети Origin",
-  "1amBJW": "комиссия",
-  "3C8pEw": "больше выдержки",
+  "vXDfP": "Вы можете продвигать свой объявление, пополняя токены Origin (OGN). Ваш OGN подобен {=commission}, который будет вычитаться каждый раз, когда производится продажа.",
+  "2DUOxZ": "комиссия",
+  "23CyCf": "Это дает вашему объявлению более высокое размещение и {=more exposure} по всей сети Origin",
+  "41dR5i": "больше выдержки",
+  "3vDb1N": "Успех!",
+  "3NGsUC": "Вы успешно продвинули своё объявление.",
+  "3QQbmb": "Список воздействия",
   "3UjbU1": "Уведомления на рабочем столе включены ✅",
   "gLVF0": "настройки",
   "1lZQR5": "настройки",
